2009-03-05 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>

	* Added options for custom categories to include/exclude
	* Moved Settings links in plugin actions
	* Fixed ppc-list CSS StyleSheet

2009-03-04 0.0.7  Aleksandar Urošević <urke@users.sourceforge.net>

	* Posts per Cat added to WordPress plugin repository
	* Fixed broken category URI on non-index pages
	* Added ppc action hook

2009-03-03 0.0.6  Aleksandar Urošević <urke@users.sourceforge.net>

	* Fixed SCC URI on non-index pages

2009-02-20 0.0.5  Aleksandar Urošević <urke@users.sourceforge.net>

	* Added plugin option to disable usage of CSS StyleSheet for list styles

2009-02-20 0.0.4  Aleksandar Urošević <urke@users.sourceforge.net>

	* Fixed CSS positioning problem

2009-02-16 0.0.3  Aleksandar Urošević <urke@users.sourceforge.net>

	* Published first public release
	* Added Settings page
	* Gettexturized (enabled localisation)

2009-02-10 0.0.2  Aleksandar Urošević <urke@users.sourceforge.net>

	* Code packed from functions.php to plugin

2009-02-02 0.0.1  Aleksandar Urošević <urke@users.sourceforge.net>

	* Project initialized