@@ -1,5 +1,7 @@
-2009-03-05 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>
+2009-03-08 0.0.8  Aleksandar Urošević <urke@users.sourceforge.net>
 
+	* Added option to display excerpt for first article only, for all articles or not display at all
+	* Added option to shorten post title to specified length (in characters)
 	* Added options for custom categories to include/exclude
 	* Moved Settings links in plugin actions
 	* Fixed ppc-list CSS StyleSheet
